docs: completed auth api docs
