# backend/interfaces/dto/user.go
@@ -1,9 +1,10 @@
 package dto
 
 type UserAuthDto struct{
-	Provider 	string 	`json:"provider"`
-	Id  	 	string 	`json:"id"`
-	Name 	 	string 	`json:"name"`
-	Email 		string 	`json:"email"`
-	AvatarUrl 	string 	`json:"avatarUrl"`
+	Provider 		string 	`json:"provider"`
+	Id  	 		string 	`json:"id"`
+	Name 	 		string 	`json:"name"`
+	Email 			string 	`json:"email"`
+	AvatarUrl 		string 	`json:"avatarUrl"`
+	FirstTimeLogin	bool 	`json:"firstTimeLogin"`
 }
