# backend/interfaces/handler/auth.go
@@ -8,7 +8,6 @@ import (
 	"strings"
 
 	"github.com/HappyNaCl/Cavent/backend/application"
-	"github.com/HappyNaCl/Cavent/backend/domain/model"
 	"github.com/HappyNaCl/Cavent/backend/interfaces/dto"
 	"github.com/gin-gonic/gin"
 	"github.com/markbates/goth/gothic"
@@ -26,7 +25,7 @@ type AuthHandler struct {}
 // @Param password formData string true "Password"
 // @Param rememberMe formData boolean false "Remember Me"
 // @Success 200 {object} dto.UserAuthDto
-// @Failure 400 {object} model.ErrorResponse
+// @Failure 400 {object} responses.ErrorResponse
 // @Router /auth/login [post]
 func (h AuthHandler) LoginCredential(c *gin.Context){
 	email := c.PostForm("email")
@@ -83,7 +82,7 @@ func (h AuthHandler) LoginCredential(c *gin.Context){
 // @Param password formData string true "Password"
 // @Param name formData string true "Name"
 // @Success 200 {object} dto.UserAuthDto
-// @Failure 400 {object} model.ErrorResponse
+// @Failure 400 {object} responses.ErrorResponse
 // @Router /auth/register [post]
 func (h AuthHandler) RegisterUser(c *gin.Context){
 	name := c.PostForm("Name")
@@ -130,13 +129,33 @@ func (h AuthHandler) RegisterUser(c *gin.Context){
 	})
 }
 
+// LoginOAuth godoc
+//@Summary A endpoint to login with OAuth
+//@Description A endpoint to login with OAuth
+//@Tags auth
+//@Produce json
+//@Param provider path string true "OAuth provider"
+//@Failure 400 {object} responses.ErrorResponse
+//@Router /auth/{provider} [get]
 func (h AuthHandler) LoginWithOAuth(c *gin.Context){	
 	provider := c.Param("provider")
+	if provider == "" {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Provider is required"})
+		return
+	}
 	fmt.Println(provider)
 	c.Request = c.Request.WithContext(context.WithValue(c.Request.Context(), "provider", provider))
 	gothic.BeginAuthHandler(c.Writer, c.Request)
 }
 
+// LoginOAuthCallback godoc
+// @Summary A endpoint to login with OAuth callback
+// @Description A endpoint to login with OAuth callback
+// @Tags auth
+// @Produce json
+// @Param provider path string true "OAuth provider"
+// @Failure 400 {object} responses.ErrorResponse
+// @Router /auth/{provider}/callback [get]
 func (h AuthHandler) LoginWithOAuthCallback(c *gin.Context){
 	gothUser, err := gothic.CompleteUserAuth(c.Writer, c.Request)
 	if err != nil {
@@ -167,6 +186,15 @@ func (h AuthHandler) LoginWithOAuthCallback(c *gin.Context){
 	c.Redirect(http.StatusTemporaryRedirect, os.Getenv("FRONTEND_URL"))
 }
 
+// Logout godoc
+// @Summary Logout
+// @Description Logout
+// @Tags auth
+// @Produce json
+// @Success 200 {object} responses.SuccessResponse
+// @Failure 400 {object} responses.ErrorResponse
+// @Router /auth/logout [post]	
+// @Security ApiKeyAuth
 func (h AuthHandler) Logout(c *gin.Context){
 	c.SetCookie("token", "", -1, "/", os.Getenv("APP_DOMAIN"), false, true)
 	c.JSON(http.StatusOK, gin.H{
@@ -174,6 +202,15 @@ func (h AuthHandler) Logout(c *gin.Context){
 	})
 }
 
+// CheckMe godoc
+// @Summary Check user info
+// @Description Check user info
+// @Tags auth
+// @Produce json
+// @Success 200 {object} dto.UserAuthDto
+// @Failure 400 {object} responses.ErrorResponse
+// @Router /auth/me [get]
+// @Security ApiKeyAuth
 func (h AuthHandler) CheckMe(c *gin.Context){
 	id, _ := c.Get("id")
 	
@@ -187,7 +224,7 @@ func (h AuthHandler) CheckMe(c *gin.Context){
 
 	firstTimeLogin, _ := c.Get("firstTimeLogin")
 
-	c.JSON(http.StatusOK, gin.H{"user": model.User{
+	c.JSON(http.StatusOK, gin.H{"user": dto.UserAuthDto{
 		Id: id.(string),
 		Provider: provider.(string),
 		Email: email.(string),
