# backend/interfaces/responses/success.go
@@ -1,0 +1,5 @@
+package responses
+
+type SuccessResponse struct {
+	Message string      `json:"message"`
+}
